--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -131,11 +131,11 @@
       <% end %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
-          <%# <% if item.buy.present? %>
-          <%# <div class='sold-out'> %>
-            <%# <span>Sold Out!!</span> %>
-          <%# </div> %>
-          <%# <% end %>  
+        <% if item.sold_out? %>
+          <div class='sold-out'> 
+            <span>Sold Out!!</span> 
+          </div>
+        <% end %>
 
           <%# //商品が売れていればsold outを表示しましょう %>
 
