--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,11 +8,15 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
+
       <%# 商品が売れている場合は、sold outを表示しましょう %>
+      <% if @item.sold_out? %>
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
+      <% end %>
       <%# //商品が売れている場合は、sold outを表示しましょう %>
+
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -24,15 +28,17 @@
     </div>
 
   <% if user_signed_in? %>
-    <% if current_user == @item.user %>
-    <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
-    <p class="or-text">or</p>
-    <%= link_to "削除", item_path(@item), data: { turbo_method: :delete}, class:"item-destroy" %>
-  <% else %>
-    <%# 商品が売れていない場合はこちらを表示しましょう %>
-    <%= link_to "購入画面に進む", item_orders_path(item_id: @item.id), data: { turbo: false } ,class:"item-red-btn"%>    <%# //商品が売れていない場合はこちらを表示しましょう %>
-  <% end %>
-  <% end %>
+      <% if current_user == @item.user %>
+        <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
+        <p class="or-text">or</p>
+        <%= link_to "削除", item_path(@item), data: { turbo_method: :delete }, class: "item-destroy" %>
+      <% elsif !@item.sold_out? %>
+        <%= link_to "購入画面に進む", item_orders_path(item_id: @item.id), data: { turbo: false }, class: "item-red-btn" %>
+      <% end %>
+    <% else %>
+      <%= link_to "購入画面に進む", item_orders_path(item_id: @item.id), data: { turbo: false }, class: "item-red-btn" %>
+    <% end %>
+
 
     <div class="item-explain-box">
       <span><%= @item.item_description %></span>
