--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -28,15 +28,17 @@
     </div>
 
   <% if user_signed_in? %>
-      <% if current_user == @item.user %>
+      <% if current_user == @item.user && !@item.sold_out? %>
         <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
         <p class="or-text">or</p>
         <%= link_to "削除", item_path(@item), data: { turbo_method: :delete }, class: "item-destroy" %>
-      <% elsif !@item.sold_out? %>
+      <% elsif current_user != @item.user && !@item.sold_out? %>
         <%= link_to "購入画面に進む", item_orders_path(item_id: @item.id), data: { turbo: false }, class: "item-red-btn" %>
       <% end %>
     <% else %>
-      <%= link_to "購入画面に進む", item_orders_path(item_id: @item.id), data: { turbo: false }, class: "item-red-btn" %>
+      <% if !@item.sold_out? %>
+        <%= link_to "購入画面に進む", item_orders_path(item_id: @item.id), data: { turbo: false }, class: "item-red-btn" %>
+      <% end %>
     <% end %>
 
 
