--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,13 +9,11 @@
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
 
-      <%# 商品が売れている場合は、sold outを表示しましょう %>
       <% if @item.sold_out? %>
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
       <% end %>
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
 
     </div>
     <div class="item-price-box">
@@ -27,19 +25,19 @@
       </span>
     </div>
 
-  <% if user_signed_in? %>
-      <% if current_user == @item.user && !@item.sold_out? %>
-        <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
-        <p class="or-text">or</p>
-        <%= link_to "削除", item_path(@item), data: { turbo_method: :delete }, class: "item-destroy" %>
-      <% elsif current_user != @item.user && !@item.sold_out? %>
-        <%= link_to "購入画面に進む", item_orders_path(item_id: @item.id), data: { turbo: false }, class: "item-red-btn" %>
-      <% end %>
-    <% else %>
-      <% if !@item.sold_out? %>
-        <%= link_to "購入画面に進む", item_orders_path(item_id: @item.id), data: { turbo: false }, class: "item-red-btn" %>
-      <% end %>
-    <% end %>
+  <% if @item.sold_out? %>
+  <% elsif user_signed_in? %>
+  <% if current_user == @item.user %>
+    <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
+    <p class="or-text">or</p>
+    <%= link_to "削除", item_path(@item), data: { turbo_method: :delete }, class: "item-destroy" %>
+  <% else %>
+    <%= link_to "購入画面に進む", item_orders_path(item_id: @item.id), data: { turbo: false }, class: "item-red-btn" %>
+  <% end %>
+  <% else %>
+  <% end %>
+
+
 
 
     <div class="item-explain-box">
