--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -28,7 +28,7 @@
   <% if @item.sold_out? %>
   <% elsif user_signed_in? %>
   <% if current_user == @item.user %>
-    <%= link_to "商品の編集", edit_item_path, data: {tarbo: false}, method: :get, class: "item-red-btn" %>
+    <%= link_to "商品の編集", edit_item_path, data: {turbo: false}, method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
     <%= link_to "削除", item_path(@item), data: { turbo_method: :delete }, class: "item-destroy" %>
   <% else %>
